# RandomGen

./: .gitignore  README.md  math_utils.py  pyproject.toml  random_gen.py  requirements.txt  test_chi_square.py  test_random_gen.py
.github/workflows/: ci.yml
src/: random_gen.py
tests/: test_performance.py  test_random_gen.py
