[project]
name = "RandomGen"
version = "0.1.0"
description = "Random number generating Python module"
authors = [{ name = "Vladimir Stoyanov", email = "vladisto100@gmail.com" }]
dependencies = []
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
